# mse_indefinite_nav_cv

./: PoseEstimation.md  README.md  RoadMarkings.md  RunYourAutobot.md  detection.py  image.md  images-read.py  matching.py
ROS-Example/: read-image-node.py
crossroads-drawer-ros-node/: instruction.md
crossroads-drawer-ros-node/crossroads_drawer/: CMakeLists.txt  package.xml
crossroads-drawer-ros-node/crossroads_drawer/launch/: crossroads_drawer.launch
crossroads-drawer-ros-node/crossroads_drawer/src/: curve.py  images-read.py
defining_markup_beginning_area/: README.md  defining_markup_beginning_area.py
defining_markup_beginning_area/defining_markup_beginning_area_node/: CMakeLists.txt  package.xml
defining_markup_beginning_area/defining_markup_beginning_area_node/launch/: defining_markup_beginning_area.launch
defining_markup_beginning_area/defining_markup_beginning_area_node/scripts/: defining_markup_beginning_area.py
markup detection script/: README.md
markup-detection-ros-node/: instruction.md
markup-detection-ros-node/road_detection/: CMakeLists.txt  package.xml
markup-detection-ros-node/road_detection/launch/: markup_detection.launch
markup-detection-ros-node/road_detection/src/: detection.py  images-read.py
roads-template-matching/: template-matching.py
signs-detection/: detection.py  images-read.py
src/: PythonApplication1.py  curve.py  demo_video.py  feature_matching.py  lane_detection.py  lane_filter.py  line.py  template_matching.py  unsharp.py
stop_line_filter_node/: stop_line_filter_node.py
wiki/: rqt_graphs.md  (+2 more)
(+1 files in other folders)
