<package>
  <name>crossroads_drawer</name>
  <version>0.1.0</version>
  <description>
  This package is a package for drawing lines on crossroads
  </description>
  <maintainer email="akodukovich@mail.ru">Alexandr Kodukov</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>