<?xml version="1.0"?>
<package>
  <name>defining_markup_beginning_area</name>
  <version>0.1.0</version>
  <description>defining_markup_beginning_area package</description>
  <maintainer email="dsorlov@stud.etu.ru">Orlov Daniil</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <export>
  </export>
</package>